Normalize line endings and improve string formatting in tests